@@ -1,0 +1,8 @@
+{
+    "tests" : [
+        {
+            "filename" : "main.cpp",
+            "flags" : "-Wno-non-pod-varargs"
+        }
+    ]
+}
