@@ -69,5 +69,6 @@
   - New Checks:
     connect-by-name
     skipped-base-class
+    qstring-varargs
   - auto-unexpected-qstringbuilder now also warns for lambdas returning QStringBuilder
   - performance optimizations
